--- a/forum-project/package.json
+++ b/forum-project/package.json
@@ -25,6 +25,7 @@
     "@ngrx/core": "^1.2.0",
     "@ngrx/store": "^6.1.0",
     "core-js": "^2.5.4",
+    "ngx-toastr": "^8.10.2",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
