--- a/forum-project/package.json
+++ b/forum-project/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^6.0.3",
     "@ngrx/core": "^1.2.0",
     "@ngrx/store": "^6.1.0",
+    "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "ngx-toastr": "^8.10.2",
     "rxjs": "^6.0.0",
