--- a/forum-project/package.json
+++ b/forum-project/package.json
@@ -24,8 +24,14 @@
     "@angular/router": "^6.0.3",
     "@ngrx/core": "^1.2.0",
     "@ngrx/store": "^6.1.0",
+    "@types/chart.js": "^2.7.30",
+    "angular-bootstrap-md": "^6.2.2",
+    "angular5-csv": "^0.2.10",
     "bootstrap": "^4.1.3",
+    "chart.js": "^2.5.0",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "ngx-toastr": "^8.10.2",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
