--- a/forum-project/package.json
+++ b/forum-project/package.json
@@ -32,6 +32,9 @@
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "jwt-decode": "^2.2.0",
+    "ngrx-store-logger": "^0.2.2",
+    "ngx-cookie-service": "^1.0.10",
     "ngx-toastr": "^8.10.2",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
