--- a/forum-project/package.json
+++ b/forum-project/package.json
@@ -35,6 +35,7 @@
     "jwt-decode": "^2.2.0",
     "ngrx-store-logger": "^0.2.2",
     "ngx-cookie-service": "^1.0.10",
+    "ngx-pagination": "^3.2.0",
     "ngx-toastr": "^8.10.2",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
