--- a/forum-project/package.json
+++ b/forum-project/package.json
@@ -36,6 +36,7 @@
     "ngrx-store-logger": "^0.2.2",
     "ngx-cookie-service": "^1.0.10",
     "ngx-pagination": "^3.2.0",
+    "ngx-spinner": "^6.1.2",
     "ngx-toastr": "^8.10.2",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
